--- a/style.css
+++ b/style.css
@@ -42,14 +42,7 @@ html {
   .container .slider {
     position: absolute;
     width: 100%;
-    height: 100%;
-    background: rgba(242, 242, 242, 0.3);
-    outline: none;
-    margin: 0;
-    transition: all 0.2s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 90vh;
   }
   .container .slider:hover {
     background: rgba(242, 242, 242, 0.1);
